Correcting issues with rebase 3.0; fixed issue with header alignment

--- a/BeerTapper_Web/home/static/core/stylehome.css
+++ b/BeerTapper_Web/home/static/core/stylehome.css
@@ -1,10 +1,8 @@
 body {
   background-color: blue;
-  
 }
 h1 {
   color: red;
-  text-align: right;
 }
 div.core{
   column-count: 3;
